--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "An attempt at a perfect Drupal project, with Vagrant, drush make file, DrupalVM, Gulp, NPM, Bower, Sass, etc.",
   "main": "gulpfile.js",
   "scripts": {
+    "postinstall": ". /source/.packages/scripts/download-drupalvm.sh",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,6 +18,7 @@
   },
   "homepage": "https://github.com/dpagini/perfect-drupal",
   "devDependencies": {
-    "gulp": "^3.9.0"
+    "gulp": "^3.9.0",
+    "require-dir": "^0.3.0"
   }
 }
